<resources>
    <string name="app_name">Orientation</string>
    <string name="action_settings">Settings</string>
    <string name="button1">Первая кнопка</string>
    <string name="button2">Вторая кнопка</string>
    <string name="button3">Третья кнопка</string>
    <string name="button4">Четвёртая кнопка</string>
    <string name="button5">Пятая кнопка</string>
    <string name="button6">Шестая кнопка</string>
</resources>
